# streaming-data-pipeline

./: .flake8  .gitignore  Makefile  README.md  core-site.xml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
scripts/: quickstart.py
src/consumer/: streaming_job.py
src/producer/: event_producer.py
src/utils/: config_loader.py  logger.py
tests/: test_event_producer.py
